# nix-tinker

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 73fyfznk122v0x4h4740yvr4shdqdmxr-source  lm46qpb78fgr2by8mnz3ax1pf1zf8shc-source  mxygiz371awjn92f9s17vsdwbbm9w03p-source
src/: main.rs  restore.rs  selection.rs  tmp.rs  unlink.rs
