[package]
name = "tinker"
version = "0.1.0"
about = "unlinks files from the nix store to tinker without rebuilding"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = { version = "0.8.16", features = ["display", "parse"] }
walkdir = "2.5.0"
